--- a/Davvi-Korea.mw
+++ b/Davvi-Korea.mw
@@ -89,7 +89,7 @@ Ruhta: Davvi-Korea won<BR>
 [[os:Корейы Адæмон Демократон Республикæ]]
 [[pam:North Korea]]
 [[pl:Korea Północna]]
-[[pms:Corea dël Nòrd]]
+[[pms:Coréa dël Nòrd]]
 [[ps:سهېلي کوريا]]
 [[pt:Coreia do Norte]]
 [[ro:Coreea de Nord]]
