--- a/Lulli-Korea.mw
+++ b/Lulli-Korea.mw
@@ -125,7 +125,7 @@
 [[oc:Corèa del Sud]]
 [[pam:South Korea]]
 [[pl:Korea Południowa]]
-[[pms:Corea dël Sud]]
+[[pms:Coréa dël Sud]]
 [[ps:سوېلي کوريا]]
 [[pt:Coreia do Sul]]
 [[rm:Corea dal sid]]
