--- a/Kiinnálaš_ođđajahki.mw
+++ b/Kiinnálaš_ođđajahki.mw
@@ -13,6 +13,7 @@
 [[es:Año Nuevo Chino]]
 [[fi:Kiinalainen uusivuosi]]
 [[fr:Nouvel An chinois]]
+[[hi:चीनी नववर्ष]]
 [[hu:Holdújév]]
 [[id:Tahun Baru Imlek]]
 [[ja:旧正月]]
