--- a/Suomagiella.mw
+++ b/Suomagiella.mw
@@ -88,6 +88,7 @@ Nomenat sodjet kásusa ja logu (ol. ja ml.) dáfus. Suomagielas lea 15 kásusa. 
 [[fy:Finsk]]
 [[ga:Fionlainnis]]
 [[gl:Lingua finesa]]
+[[haw:‘Ōlelo Pinilana]]
 [[he:פינית]]
 [[hi:फ़िनिश भाषा]]
 [[hr:Finski jezik]]
