robot  legger til: [[fy:Spaansk]]

--- a/Spánskkagiella.mw
+++ b/Spánskkagiella.mw
@@ -69,6 +69,7 @@
 [[fo:Spanskt (mál)]]
 [[fr:Espagnol]]
 [[frp:Castilyan]]
+[[fy:Spaansk]]
 [[ga:Spáinnis]]
 [[gl:Lingua castelá]]
 [[gn:Karaiñe'ẽ]]
