robot  legger til: [[new:बंगलादेश]]

--- a/Bangladesh.mw
+++ b/Bangladesh.mw
@@ -84,6 +84,7 @@ Ruhta: [[Taka]]<BR>
 [[ms:Bangladesh]]
 [[na:Bangladesh]]
 [[nds:Bangladesch]]
+[[new:बंगलादेश]]
 [[nl:Bangladesh]]
 [[nn:Bangladesh]]
 [[no:Bangladesh]]
