robot  endrer: [[pt:Mianmar]]

--- a/Myanmar.mw
+++ b/Myanmar.mw
@@ -84,7 +84,7 @@
 [[pl:Birma]]
 [[pms:Myanmar]]
 [[ps:ماينامار(برما)]]
-[[pt:Myanmar]]
+[[pt:Mianmar]]
 [[qu:Myanmar]]
 [[ro:Myanmar]]
 [[ru:Мьянма]]
