robot  endrer: [[hr:Latvija]]

--- a/Látvia.mw
+++ b/Látvia.mw
@@ -125,7 +125,7 @@ width="300px">
 [[gv:Yn Latvey]]
 [[he:לטביה]]
 [[hi:लातविया]]
-[[hr:Letonija]]
+[[hr:Latvija]]
 [[hsb:Letiska]]
 [[ht:Letoni]]
 [[hu:Lettország]]
