--- a/Afrikánsagiella.mw
+++ b/Afrikánsagiella.mw
@@ -34,7 +34,7 @@
 [[an:Afrikaans]]
 [[ar:لغة أفريكانية]]
 [[ast:Afrikaans]]
-[[bat-smg:Afrėkanū ruoda]]
+[[bat-smg:Afrėkanu kalba]]
 [[bg:Африкаанс]]
 [[bn:আফ্রিকান্স ভাষা]]
 [[br:Afrikaneg]]
