--- a/Luxemburg.mw
+++ b/Luxemburg.mw
@@ -48,7 +48,7 @@ Ruhta: [[Euro]]<BR>
 [[el:Λουξεμβούργο]]
 [[eml:Lussembûrgh]]
 [[en:Luxembourg]]
-[[eo:Luksemburgio]]
+[[eo:Luksemburgo (lando)]]
 [[es:Luxemburgo]]
 [[et:Luksemburg]]
 [[eu:Luxenburgo]]
