--- a/Spánskkagiella.mw
+++ b/Spánskkagiella.mw
@@ -45,7 +45,7 @@
 [[ay:Kastilla aru]]
 [[az:İspan dili]]
 [[bar:Schbanisch]]
-[[bat-smg:Ėspanu ruoda]]
+[[bat-smg:Ėspanu kalba]]
 [[be-x-old:Гішпанская мова]]
 [[bg:Испански език]]
 [[bn:স্পেনীয় ভাষা]]
