robot  legger til: [[new:युरोप]]

--- a/Eurohpá.mw
+++ b/Eurohpá.mw
@@ -110,6 +110,7 @@ Eurohpá lea eatnanoasi.
 [[nds:Europa]]
 [[nds-nl:Europa (continent)]]
 [[ne:युरोप]]
+[[new:युरोप]]
 [[nl:Europa (werelddeel)]]
 [[nn:Europa]]
 [[no:Europa]]
