robot  endrer: [[ay:Jallu qallta phaxsi]]

--- a/Juovlamánnu.mw
+++ b/Juovlamánnu.mw
@@ -11,7 +11,7 @@
 [[ar:ديسمبر]]
 [[arc:ܟܢܘܢ ܐ]]
 [[ast:Avientu]]
-[[ay:Jallu qallta]]
+[[ay:Jallu qallta phaxsi]]
 [[az:Dekabr]]
 [[bat-smg:Groudis]]
 [[be:Снежань]]
