robot  endrer: [[bat-smg:Danu kalba]]

--- a/Dánskkagiella.mw
+++ b/Dánskkagiella.mw
@@ -47,7 +47,7 @@
 [[ar:لغة دانماركية]]
 [[ast:Danés]]
 [[az:Danimarka dili]]
-[[bat-smg:Danū ruoda]]
+[[bat-smg:Danu kalba]]
 [[be-x-old:Дацкая мова]]
 [[bg:Датски език]]
 [[bn:ডেনীয় ভাষা]]
