robot  endrer: [[wo:Bëj-saalumu Aamerig]]

--- a/Lulli-Amerihkká.mw
+++ b/Lulli-Amerihkká.mw
@@ -131,7 +131,7 @@ Guovllut, mat eai leat iehčanaččat:
 [[tr:Güney Amerika]]
 [[uk:Південна Америка]]
 [[vi:Nam Mỹ]]
-[[wo:Bëj-saalumu Aamerik]]
+[[wo:Bëj-saalumu Aamerig]]
 [[yi:דרום אמעריקע]]
 [[zh:南美洲]]
 [[zh-min-nan:Lâm Bí-chiu]]
