--- a/Eavru.mw
+++ b/Eavru.mw
@@ -1,3 +1,7 @@
 '''Eavru''' (''Oxyria digyna'') lea [[Juopmošattut|juopmušattuid]] ''(Polygonaceae)'' ''Oxyria''-sohkii gullevaš šaddu.
 
 [[Category:Juopmošattut]]
+
+[[de:Alpen-Säuerling]]
+[[en:Oxyria digyna]]
+[[sv:Fjällsyra]]
