robot  endrer: [[new:हिन्दी भाषा]]

--- a/Hindigiella.mw
+++ b/Hindigiella.mw
@@ -85,7 +85,7 @@ Hindigiella lea virggálaš giella čuovvovaš riikkain:
 [[nah:Inditlahtōlli]]
 [[nds:Hindi]]
 [[ne:हिन्दी]]
-[[new:हिन्दी]]
+[[new:हिन्दी भाषा]]
 [[nl:Hindi]]
 [[nn:Hindi]]
 [[no:Hindi]]
