*Empty MediaWiki Message*

--- a/Pälkäne.mw
+++ b/Pälkäne.mw
@@ -7,12 +7,12 @@
 | guovlugielda = [[Nuortalulli-Pirkanmaa guovlugielda]]
 | vuođđudanjahki = 
 | hálddahusguovddáš =
-| viidodat = 
-| olmmošlohku = 
-| olmmošlogujahki = 
-| giella = 
+| viidodat = 738,59
+| olmmošlohku = 6 961
+| olmmošlogujahki = 31.10.2007
+| giella = [[suomagiella]]
 | url = www.palkane.fi
-| gielddahoavda = 
+| gielddahoavda = Esko Arasalo
 | eará = 
 }}
 
@@ -21,7 +21,9 @@
 
 [[de:Pälkäne]]
 [[en:Pälkäne]]
+[[fr:Pälkäne]]
+[[it:Pälkäne]]
 [[nl:Pälkäne]]
 [[ro:Pälkäne]]
-[[fi:Pälkäne]]
+[[se:Pälkäne]]
 [[sv:Pälkäne]]
