--- a/Itália.mw
+++ b/Itália.mw
@@ -38,7 +38,7 @@ Ruhta: [[Euro]]<BR>
 [[br:Italia]]
 [[bs:Italija]]
 [[ca:Itàlia]]
-[[ce:Италий]]
+[[ce:Итали]]
 [[ceb:Italya]]
 [[co:Italia]]
 [[cs:Itálie]]
