*Empty MediaWiki Message*

--- a/Burundi.mw
+++ b/Burundi.mw
@@ -1,4 +1,10 @@
 '''Burundi''' lea riika Gaska-[[Afrihkká|Afrihkás]]. Dan radjeriikkat leat davvin [[Rwanda]], nuortin ja máddin [[Tanzánia]] ja oarjin [[Kongo demokráhtalaš dásseváldi]] sihke maiddái [[Tanganjikajávri]].
+== Vuođđodieđut: ==
+Virggálašgiella: [[Kirundigiella]] <BR>
+Oaivegávpot: [[Bujumbura]]<BR>
+Viidodat: 27 830 njealjehaskilomehtera<BR>
+Ássit: 6 054 714 <BR>
+Ruhta: [[Frangi]]<BR>
 == Geahča maid ==
 * [[Máilmmi riikkat]]
 {{Afrihkká}}
