robot  legger til: [[no:Juho Kusti Paasikivi]]

--- a/Juho_Kusti_Paasikivi.mw
+++ b/Juho_Kusti_Paasikivi.mw
@@ -30,6 +30,7 @@
 [[ja:ユホ・クスティ・パーシキヴィ]]
 [[nl:Juho Kusti Paasikivi]]
 [[nn:Juho Paasikivi]]
+[[no:Juho Kusti Paasikivi]]
 [[oc:Juho Kusti Paasikivi]]
 [[pl:Juho Paasikivi]]
 [[pt:Juho Kusti Paasikivi]]
