--- a/Junior_Eurovision_lávllagilvvohallan_2007.mw
+++ b/Junior_Eurovision_lávllagilvvohallan_2007.mw
@@ -80,8 +80,9 @@
 [[de:Junior Eurovision Song Contest 2007]]
 [[en:Junior Eurovision Song Contest 2007]]
 [[es:Festival de Eurovisión Infantil 2007]]
-[[nl:Junior Eurovisie Songfestival 2007]]
 [[ja:ジュニア・ユーロビジョン・ソング・コンテスト2007]]
+[[lt:Vaikų Eurovizijos dainų konkursas 2007]]
+[[nl:Junior Eurovisie Songfestival 2007]]
 [[pt:Festival Eurovisão da Canção Júnior 2007]]
 [[ro:Eurovision Junior 2007]]
 [[ru:Детский конкурс песни Евровидение 2007]]
