robot  legger til: [[no:Kaarlo Juho Ståhlberg]]

--- a/Kaarlo_Juho_Ståhlberg.mw
+++ b/Kaarlo_Juho_Ståhlberg.mw
@@ -28,6 +28,7 @@
 [[it:Kaarlo Juho Ståhlberg]]
 [[nl:Kaarlo Juho Ståhlberg]]
 [[nn:Kaarlo Juho Ståhlberg]]
+[[no:Kaarlo Juho Ståhlberg]]
 [[oc:Kaarlo Juho Ståhlberg]]
 [[pl:Kaarlo Juho Ståhlberg]]
 [[ro:Kaarlo Juho Ståhlberg]]
