The file [[:Image:488px-Cow_vetch2.jpg]] has been replaced by [[:Image:Cow_vetch2.jpg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", although NOT an exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Sáhpal.mw
+++ b/Sáhpal.mw
@@ -1,4 +1,4 @@
-[[Image:488px-Cow vetch2.jpg|thumb|250px|Sáhpala lieđit]]
+[[Image:Cow_vetch2.jpg|thumb|250px|Sáhpala lieđit]]
 '''Sáhpal''' dahjege '''fierbmerássi''' (''Vicia cracca'') gullá [[eartašattut|eartašattuide]] (''Fabaceae''). 
 
 [[Category:Eartašattut]]
