--- a/Keminmaa.mw
+++ b/Keminmaa.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma=Keminmaa
-| vearjogovva=[[Image:Keminmaan vaakuna.jpg|100px]] 
+| vearjogovva=[[Image:Keminmaa.vaakuna.svg|100px]] 
 | Kárta=[[Image:Keminmaa_Suomen_maakuntakartalla.png|140px]]
 | leatna=[[Lappi leatna]]
 | eanangoddi=[[Lappi eanangoddi]]
