--- a/Giepma.mw
+++ b/Giepma.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma=Giepma
-| vearjogovva=[[Image:Kemin vaakuna.png|100px]] 
+| vearjogovva=[[Image:Kemi.vaakuna.svg|100px]] 
 | Kárta=[[Image:Kemi_Suomen_maakuntakartalla.png|140px]]
 | leatna=[[Lappi leatna]]
 | eanangoddi=[[Lappi eanangoddi]]
