robot  legger til: [[no:Kyösti Kallio]]

--- a/Kyösti_Kallio.mw
+++ b/Kyösti_Kallio.mw
@@ -27,6 +27,7 @@
 [[it:Kyösti Kallio]]
 [[nl:Kyösti Kallio]]
 [[nn:Kyösti Kallio]]
+[[no:Kyösti Kallio]]
 [[oc:Kyösti Kallio]]
 [[pl:Kyösti Kallio]]
 [[ro:Kyösti Kallio]]
