robot  legger til: [[mr:लॉरी क्रिस्चियन रिलॅन्डर]], [[no:Lauri Kristian Relander]]

--- a/Lauri_Kristian_Relander.mw
+++ b/Lauri_Kristian_Relander.mw
@@ -16,15 +16,17 @@
 [[Category:Suoma presideanttat|Relander Lauri Kristian]]
 
 [[de:Lauri Kristian Relander]]
-[[et:Lauri Relander]]
 [[en:Lauri Kristian Relander]]
 [[es:Lauri Kristian Relander]]
+[[et:Lauri Relander]]
 [[fi:Lauri Kristian Relander]]
 [[fr:Lauri Kristian Relander]]
 [[io:Lauri Kristian Relander]]
 [[it:Lauri Kristian Relander]]
+[[mr:लॉरी क्रिस्चियन रिलॅन्डर]]
 [[nl:Lauri Kristian Relander]]
 [[nn:Lauri Kristian Relander]]
+[[no:Lauri Kristian Relander]]
 [[pl:Lauri Kristian Relander]]
 [[ro:Lauri Kristian Relander]]
 [[sv:Lauri Kristian Relander]]
