robot  endrer: [[af:Engels]]

--- a/Eaŋgalsgiella.mw
+++ b/Eaŋgalsgiella.mw
@@ -61,7 +61,7 @@ Eaŋgalasgiela historjjá sáhttá juohkit golbma badjái:
 [[Category:Gielat]]
 [[Category:Germánalaš gielat]]
 
-[[af:Engels (taal)]]
+[[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
 [[an:Idioma anglés]]
