robot  legger til: [[et:Loimaa]], [[fr:Loimaa]], [[it:Loimaa]]

--- a/Loimaa.mw
+++ b/Loimaa.mw
@@ -21,7 +21,10 @@
 
 [[de:Loimaa]]
 [[en:Loimaa]]
+[[et:Loimaa]]
 [[fi:Loimaa]]
+[[fr:Loimaa]]
+[[it:Loimaa]]
 [[nl:Loimaa]]
 [[ro:Loimaa]]
 [[sv:Loimaa]]
