robot  legger til: [[hu:Luxemburgi nyelv]]

--- a/Luxemburggagiella.mw
+++ b/Luxemburggagiella.mw
@@ -58,6 +58,7 @@
 [[gd:Lucsamburgais]]
 [[he:לוקסמבורגית]]
 [[hr:Luksemburški jezik]]
+[[hu:Luxemburgi nyelv]]
 [[id:Bahasa Luksemburg]]
 [[is:Lúxemborgíska]]
 [[it:Lingua lussemburghese]]
