robot  legger til: [[nah:Madagascar]], [[vec:Madagascar]]

--- a/Madagaskar.mw
+++ b/Madagaskar.mw
@@ -64,6 +64,7 @@
 [[mk:Мадагаскар]]
 [[ml:മഡഗാസ്കര്‍]]
 [[ms:Madagaskar]]
+[[nah:Madagascar]]
 [[nds:Madagaskar]]
 [[nl:Madagaskar]]
 [[nn:Madagaskar]]
@@ -95,6 +96,7 @@
 [[ug:Madagaskar]]
 [[uk:Мадагаскар]]
 [[uz:Madagaskar]]
+[[vec:Madagascar]]
 [[vi:Madagascar]]
 [[vo:Malagaseän]]
 [[wo:Madagaskaar]]
