robot  endrer: [[tl:Madeira]]

--- a/Madeira.mw
+++ b/Madeira.mw
@@ -52,7 +52,7 @@
 [[sv:Madeira]]
 [[sw:Visiwa vya Madeira]]
 [[th:มาเดรา]]
-[[tl:Mga Pulo ng Madeira]]
+[[tl:Madeira]]
 [[tr:Madeira Adaları]]
 [[uk:Мадейра]]
 [[ur:مادیعیرا]]
