--- a/Suoma_oaiveministtar.mw
+++ b/Suoma_oaiveministtar.mw
@@ -2,9 +2,8 @@
 
 '''Suoma oaiveministtar''' lea [[ráđđehus]]a jođiheaddji. Seammas son jođiha maid [[Suopma|Suoma]] [[sispolitihkka|sis-]] ja osiin [[olgopolitihkka|olgopolitihka]] ovttas [[Suoma presideanta|dásseválddi presideanttan]]. Jagis [[2000]] ođastuvvui [[Suoma vuođđoláhka|vuođđoláhka]]. Seammas [[oaiveministtar|oaiveministara]] rollá nanusmuvái. Presideanttas ii leat šat jur ollenge sispolitihkkáraš váldi. Dán áigge oaiveministaris leat eanet váldi go presideanttas.
 
-{{stub}}
 
-[[kategori:Suopma]]
+[[category:Suopma]]
 
 [[ca:Llista dels Primers ministres de Finlàndia]]
 [[en:Prime Minister of Finland]]
