robot  legger til: [[io:Margrethe 2ma di Dania]]

--- a/Margrethe_II.mw
+++ b/Margrethe_II.mw
@@ -22,6 +22,7 @@
 [[hr:Margareta II.]]
 [[hu:II. Margit dán királynő]]
 [[id:Margrethe II dari Denmark]]
+[[io:Margrethe 2ma di Dania]]
 [[is:Margrét Þórhildur]]
 [[it:Margherita II di Danimarca]]
 [[ja:マルグレーテ2世 (デンマーク女王)]]
