*Empty MediaWiki Message*

--- a/Bussá.mw
+++ b/Bussá.mw
@@ -1,7 +1,4 @@
-[[Image:Domestic cat.jpg|thumb|230px]]
-[[Image:Cat in tree03.jpg|thumb|230px]]
-[[Image:Cat03.jpg|thumb|230px]]
-
+[[Image:Kamee01.jpg|thumb|Bussá]]
 '''Bussá''' (''Felis silvestris catus'')
 
 [[als:Hauskatze]]
