robot  legger til: [[af:Reykjavík]], [[co:Reykjavík]]

--- a/Reykjavík.mw
+++ b/Reykjavík.mw
@@ -4,6 +4,7 @@
 
 {{Gaskandaga artihkal}}
 
+[[af:Reykjavík]]
 [[am:ሬይኪያቪክ]]
 [[ar:ريكيافيك]]
 [[be-x-old:Рэйк'явік]]
@@ -11,6 +12,7 @@
 [[bs:Rejkjavik]]
 [[ca:Reykjavík]]
 [[ce:Рейкьявик]]
+[[co:Reykjavík]]
 [[cs:Reykjavík]]
 [[csb:Reykjavík]]
 [[cy:Reykjavík]]
