--- a/Tohmajärvi.mw
+++ b/Tohmajärvi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Tohmajärvi gielda
-| vearjogovva = [[Image:Tohmajarven vaakuna.jpg|100px|vearjogovva]]
+| vearjogovva = [[Image:Tohmajärvi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Tohmajärvi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Gárjila eanangoddi|Davvi-Gárjil]]
