--- a/Keitele.mw
+++ b/Keitele.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Keitele gielda
-| vearjogovva = [[Image:Keitele.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Keitele.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Keitele in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
