--- a/Kaavi.mw
+++ b/Kaavi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Kaavi gielda
-| vearjogovva = [[Image:Kaavi.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Kaavi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Kaavi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
