--- a/Amerihká_ovttastuvvan_stáhtat.mw
+++ b/Amerihká_ovttastuvvan_stáhtat.mw
@@ -112,6 +112,7 @@ Ruhta: [[USA dollar]]<BR>
 [[lg:Amereka]]
 [[li:Vereinegde State van Amerika]]
 [[lij:Stati Unïi d'America]]
+[[lmo:United States]]
 [[ln:Lisangá lya Ameríka]]
 [[lt:JAV]]
 [[lv:Amerikas Savienotās Valstis]]
