robot  legger til: [[fa:نیژنی نووگورود]]

--- a/Nižni_Novgorod.mw
+++ b/Nižni_Novgorod.mw
@@ -1,47 +1,48 @@
 '''Nižni Novgorod''' ([[ruoššagiella|ruoššagillii]] ''Нижний Новгород'') lea gávpot [[Ruošša]]s.  Olmmošlohku lea 1,311,252.
 
 [[be-x-old:Ніжні Ноўгарад]]
-[[br:Nijniy Novgorod]]
 [[bg:Нижни Новгород]]
+[[br:Nijniy Novgorod]]
 [[ca:Nijni Nóvgorod]]
-[[cv:Чулхула]]
 [[cs:Nižnij Novgorod]]
+[[cu:Нижьн҄ии Новъ Градъ]]
+[[cv:Чулхула]]
 [[cy:Nizhniy Novgorod]]
 [[da:Nizjnij Novgorod]]
 [[de:Nischni Nowgorod]]
 [[en:Nizhny Novgorod]]
-[[et:Nižni Novgorod]]
-[[es:Nizhny Nóvgorod]]
 [[eo:Niĵnij Novgorod]]
+[[es:Nizhny Nóvgorod]]
+[[et:Nižni Novgorod]]
+[[fa:نیژنی نووگورود]]
+[[fi:Nižni Novgorod]]
 [[fr:Nijni-Novgorod]]
-[[ko:니즈니노브고로드]]
-[[hr:Nižnji Novgorod]]
-[[io:Nizhny Novgorod]]
-[[id:Nizhny Novgorod]]
-[[os:Дæллаг Новгород]]
-[[it:Nižnij Novgorod]]
 [[he:ניז'ני נובגורוד]]
-[[la:Novogardia Inferior]]
-[[lv:Ņižņijnovgoroda]]
-[[lt:Nižnij Novgorodas]]
+[[hr:Nižnji Novgorod]]
 [[hu:Nyizsnyij Novgorod]]
-[[mk:Нижни Новгород]]
-[[nl:Nizjni Novgorod]]
+[[id:Nizhny Novgorod]]
+[[io:Nizhny Novgorod]]
+[[it:Nižnij Novgorod]]
 [[ja:ニジニ・ノヴゴロド]]
-[[no:Nizjnij Novgorod]]
-[[nn:Nizjnij Novgorod]]
+[[ko:니즈니노브고로드]]
+[[la:Novogardia Inferior]]
+[[lt:Nižnij Novgorodas]]
+[[lv:Ņižņijnovgoroda]]
+[[mk:Нижни Новгород]]
 [[nds:Nischni Nowgorod]]
+[[nl:Nizjni Novgorod]]
+[[nn:Nizjnij Novgorod]]
+[[no:Nizjnij Novgorod]]
+[[os:Дæллаг Новгород]]
 [[pl:Niżny Nowogród]]
 [[pt:Níjni Novgorod (cidade)]]
-[[ro:Nijni Novgorod]]
 [[qu:Nischni Nowgorod]]
+[[ro:Nijni Novgorod]]
 [[ru:Нижний Новгород]]
 [[simple:Nizhny Novgorod]]
 [[sk:Nižný Novgorod]]
-[[cu:Нижьн҄ии Новъ Градъ]]
 [[sl:Nižni Novgorod]]
 [[sr:Нижњи Новгород]]
-[[fi:Nižni Novgorod]]
 [[sv:Nizjnij Novgorod]]
 [[uk:Нижній Новгород]]
 [[zh:下諾夫哥羅德]]
