--- a/Davvi-Trøndelága_fylka.mw
+++ b/Davvi-Trøndelága_fylka.mw
@@ -37,6 +37,7 @@
 [[pl:Nord-Trøndelag]]
 [[pt:Nord-Trøndelag]]
 [[ro:Nord-Trøndelag]]
+[[ru:Нур-Трёнделаг]]
 [[sv:Nord-Trøndelag fylke]]
 [[tr:Nord-Trøndelag]]
 [[zh:北特伦德拉格]]
