--- a/Kiuruvesi.mw
+++ b/Kiuruvesi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Kiuruvesi gávpot
-| vearjogovva = [[Image:Kiuruvesi.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Kiuruvesi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Kiuruvesi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
