Undo revision 34925 by [[Special:Contributions/194.251.240.116|194.251.240.116]] ([[User talk:194.251.240.116|Talk]])

--- a/Bussá.mw
+++ b/Bussá.mw
@@ -1,4 +1,7 @@
-[[Image:Kamee01.jpg|thumb|Bussá]]
+[[Image:Domestic cat.jpg|thumb|230px]]
+[[Image:Cat in tree03.jpg|thumb|230px]]
+[[Image:Cat03.jpg|thumb|230px]]
+
 '''Bussá''' (''Felis silvestris catus'')
 
 [[als:Hauskatze]]
