removing not working FA templates

--- a/Bussá.mw
+++ b/Bussá.mw
@@ -22,16 +22,16 @@
 [[co:Ghjattu]]
 [[cy:Cath]]
 [[da:Kat]]
-[[de:Hauskatze]]{{Link FA|de}}
+[[de:Hauskatze]]
 [[et:Kass]]
 [[el:Γάτα]]
 [[eml:Gàt]]
-[[en:Cat]]{{Link FA|en}}
+[[en:Cat]]
 [[es:Felis]]
 [[eo:Kato]]
 [[eu:Katu]]
 [[fa:گربه‌سانان]]
-[[fr:Chat]]{{Link FA|fr}}
+[[fr:Chat]]
 [[gl:Gato]]
 [[ko:고양이]]
 [[hr:Domaća mačka]]
@@ -48,7 +48,7 @@
 [[lt:Katė]]
 [[li:Katte]]
 [[ln:Nkɔ́ndɔkɔ́]]
-[[hu:Macska]]{{Link FA|hu}}
+[[hu:Macska]]
 [[mg:Saka]]
 [[mt:Qattus]]
 [[mr:मांजर]]
@@ -66,14 +66,14 @@
 [[pt:Gato doméstico]]
 [[ro:Pisică de casă]]
 [[qu:Michi]]
-[[ru:Кошка]]{{Link FA|ru}}
+[[ru:Кошка]]
 [[st:Katse]]
 [[sq:Macja]]
 [[simple:Cat]]
 [[sd:ٻلي]]
-[[sk:Mačka domáca]]{{Link FA|sk}}
+[[sk:Mačka domáca]]
 [[sl:Domača mačka]]
-[[sr:Мачка]]{{Link FA|sr}}
+[[sr:Мачка]]
 [[fi:Kissa]]
 [[sv:Katt]]
 [[th:แมว]]
