robot  legger til: [[new:अमेरिका]]

--- a/Amerihká_ovttastuvvan_stáhtat.mw
+++ b/Amerihká_ovttastuvvan_stáhtat.mw
@@ -129,6 +129,7 @@ Ruhta: [[USA dollar]]<BR>
 [[nds:USA]]
 [[nds-nl:Verienigde Staoten van Amerika]]
 [[ne:संयुक्त राज्य अमेरिका]]
+[[new:अमेरिका]]
 [[nl:Verenigde Staten]]
 [[nn:USA]]
 [[no:Amerikas forente stater]]
