robot  legger til: [[no:Pehr Evind Svinhufvud]]

--- a/Pehr_Evind_Svinhufvud.mw
+++ b/Pehr_Evind_Svinhufvud.mw
@@ -27,6 +27,7 @@
 [[ja:ペール・スヴィンヒュー]]
 [[nl:Pehr Evind Svinhufvud]]
 [[nn:Pehr Evind Svinhufvud]]
+[[no:Pehr Evind Svinhufvud]]
 [[pl:Pehr Evind Svinhufvud]]
 [[ro:Pehr Evind Svinhufvud]]
 [[ru:Свинхувуд, Пер Эвинд]]
