robot  legger til: [[no:Pikis]]

--- a/Piikkiö.mw
+++ b/Piikkiö.mw
@@ -56,5 +56,6 @@ Aerla, Aininen, Andelmaa, Aro, Bussila, Böle, Finby, Hadvala, Harvaluoto, Hiirl
 [[fr:Piikkiö]]
 [[it:Piikkiö]]
 [[nl:Piikkiö]]
+[[no:Pikis]]
 [[ro:Piikkiö]]
 [[sv:Pikis]]
