--- a/Polvijärvi.mw
+++ b/Polvijärvi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Polvijärvi gielda
-| vearjogovva = [[Image:Polvijarven vaakuna.jpg|100px|vearjogovva]]
+| vearjogovva = [[Image:Polvijärvi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Polvijärvi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Gárjila eanangoddi|Davvi-Gárjil]]
