--- a/Maaninka.mw
+++ b/Maaninka.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Maaninka gielda
-| vearjogovva = [[Image:Maaninka.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Maaninka.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Maaninka in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
