--- a/Tervo.mw
+++ b/Tervo.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Tervo gielda
-| vearjogovva = [[Image:Tervo.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Tervo.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Tervo in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
