*Empty MediaWiki Message*

--- a/Elizabeth_II.mw
+++ b/Elizabeth_II.mw
@@ -1,5 +1,4 @@
-
-
+[[Image:Elizabeth II.jpg|thumb|250px|Elizabeth II]]
 '''Elizabeth II''' (Elizabeth Alexandra Mary, [[cuoŋománu 21.]] [[1926]]) lea [[Stuorra-Británnia]], [[Antigua ja Barbuda]], [[Austrália]], [[Baháma]], [[Barbados]]a, [[Belize]], [[Kanáda]], [[Grenadá]], [[Jamaica]], [[Ođđa-Selánda|Ođđa-Selándda]], [[Papua-Ođđa-Guinea]], [[Saint Kitts ja Nevis]]a, [[Saint Lucia]], [[Saint Vincent ja Grenadines]]a, [[Salomonsullot|Salomonsulloid]] ja [[Tuvalu]] dronnet.
 
 {{Gaskandaga artihkal}}
