--- a/Siilinjärvi.mw
+++ b/Siilinjärvi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Siilinjärvi gielda
-| vearjogovva = [[Image:Siilinjarven vaakuna.jpg|100px|vearjogovva]]
+| vearjogovva = [[Image:Siilinjärvi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Siilinjärvi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
