--- a/Petter_Morottaja.mw
+++ b/Petter_Morottaja.mw
@@ -1,4 +1,4 @@
-'''Petter Jori Andaras Morottaja''' (r. [[1982]]) lea [[anáraččat|anáraš]], gii lea čállán girjjiid [[anárašgiella|anárašgillii]]. Son almmustahtii vuosttas girjjis 17-jahkásaččán. Son lea evttohassan [[Suoma Sámedikki válggat 2007|Sámedikki válggain 2007]] ja son lea mielde [[Anarâškielâ servi]]-searvvis. Morottaja doaimmaha [[Kiera|Kierâš]]-nammasaš [[anárašgiella|anárašgiel]] neahttaáviissa, man olggosaddi lea anárašgiela searvi ja mii almmustuvvá oktii vahkkus.
+'''Petter Jori Andaras Morottaja''' (r. [[suoidnemánu 11.]] [[1982]] [[Anár]]as) lea [[anáraččat|anáraš]], gii lea čállán girjjiid [[anárašgiella|anárašgillii]]. Son almmustahtii vuosttas girjjis 17-jahkásaččán. Son lea evttohassan [[Suoma Sámedikki válggat 2007|Sámedikki válggain 2007]] ja son lea mielde [[Anarâškielâ servi]]-searvvis. Morottaja doaimmaha [[Kiera|Kierâš]]-nammasaš [[anárašgiella|anárašgiel]] neahttaáviissa, man olggosaddi lea anárašgiela searvi ja mii almmustuvvá oktii vahkkus.
 
 == Girjjit ==
 * ''Suábi maainâs'' (Soappi máinnas) [[1999]]. Martti Rikkonena govat. Vuosttas anárašgielat nuoraid fantasiijaromána.
