--- a/Suoidnemánu_11..mw
+++ b/Suoidnemánu_11..mw
@@ -7,6 +7,7 @@
 
 
 == Riegádeamit ==
+* [[1982]] &mdash; [[anáraččat|anáraš]] girje&#0269;álli ja oahppaheaddji Petter Morottaja
 
 == Jápmimat ==
 
