/* Riegádeamit */ [[Petter Morottaja]]

--- a/Suoidnemánu_11..mw
+++ b/Suoidnemánu_11..mw
@@ -7,7 +7,7 @@
 
 
 == Riegádeamit ==
-* [[1982]] &mdash; [[anáraččat|anáraš]] girje&#0269;álli ja oahpaheaddji Petter Morottaja
+* [[1982]] &mdash; [[anáraččat|anáraš]] girje&#0269;álli ja oahpaheaddji [[Petter Morottaja]]
 
 == Jápmimat ==
 
