[[fi:Petter Morottaja]]

--- a/Petter_Morottaja.mw
+++ b/Petter_Morottaja.mw
@@ -9,3 +9,4 @@ Girjjiid lea buvttádan [[Anarâškielâ servi ry]].
 [[Category:Sámi girječállit|Morottaja, Petter]]
 
 [[en:Petter Morottaja]]
+[[fi:Petter Morottaja]]
