--- a/Sonkajärvi.mw
+++ b/Sonkajärvi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Sonkajärvi gielda
-| vearjogovva = [[Image:Sonkajärvi.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Sonkajärvi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Sonkajärvi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
