--- a/Rautalampi.mw
+++ b/Rautalampi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Rautalampi gielda
-| vearjogovva = [[Image:Rautalampi.vaakuna.png|100px|vearjogovva]]
+| vearjogovva = [[Image:Rautalampi.vaakuna.svg|100px|vearjogovva]]
 | Kárta = [[Image:Location of Rautalampi in Finland.png|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
