--- a/Rautjärvi.mw
+++ b/Rautjärvi.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma =  gielda
-| vearjogovva = [[Image:Rautjarven vaakuna.jpg|120px]]
+| vearjogovva = [[Image:Rautjärvi.vaakuna.svg|120px]]
 | Kárta = [[Image:Location of Rautjärvi in Finland.png|140px]]
 | leatna = [[Lulli-Suoma leatna]]
 | eanangoddi= 
