--- a/Jaala.mw
+++ b/Jaala.mw
@@ -1,6 +1,6 @@
 {{Gieldadieđut, Suopma
 | namma = Jaala gielda
-| vearjogovva = [[Image:Jaalan vaakuna.png|100px]]
+| vearjogovva = [[Image:Jaala.vaakuna.svg|100px]]
 | Kárta = [[Image:Location of Jaala in Finland.png|140px]]
 | leatna = [[Lulli-Suoma leatna]]
 | eanangoddi= [[Kymileagi eanangoddi]]
