--- a/Wellington.mw
+++ b/Wellington.mw
@@ -21,6 +21,7 @@
 [[fa:ولینگتون]]
 [[fi:Wellington]]
 [[fr:Wellington (Nouvelle-Zélande)]]
+[[gd:Wellington]]
 [[gl:Wellington]]
 [[gu:વેલિંગ્ટન]]
 [[he:ולינגטון (ניו זילנד)]]
