robot  legger til: [[gd:Tiomor an Ear]]

--- a/Nuorta-Timor.mw
+++ b/Nuorta-Timor.mw
@@ -38,6 +38,7 @@
 [[fr:Timor oriental]]
 [[frp:Timor orientâl]]
 [[fy:East Timor]]
+[[gd:Tiomor an Ear]]
 [[gl:Timor Leste - Timor Lorosa'e]]
 [[he:מזרח טימור]]
 [[hi:पूर्वी तीमोर]]
