robot  legger til: [[gd:Na h-Eileanan Mharshall]]

--- a/Marshallsullot.mw
+++ b/Marshallsullot.mw
@@ -30,6 +30,7 @@ Marshallsullot leat [[Jaskesáhpi|Jaskesábis]].
 [[fi:Marshallinsaaret]]
 [[fr:Îles Marshall]]
 [[frp:March·al (payis)]]
+[[gd:Na h-Eileanan Mharshall]]
 [[gl:Illas Marshall - Marshall Islands]]
 [[he:איי מרשל]]
 [[hr:Maršalovi Otoci]]
