[[fi:Ilmari Mattus]]

--- a/Uccpárnáá_Vuoli_Ilmar.mw
+++ b/Uccpárnáá_Vuoli_Ilmar.mw
@@ -10,3 +10,5 @@ Son lea bargan ángirit [[anárašgiella|anárašgiela]] ovdii. Son lei mielde v
 *[http://www.samediggi.fi/vanha/psaame/toimieli/kulttuuri/kult3.htm Anáraš kulturbargi]
 
 [[Category:Anáraččat|Mattus, Ilmari]]
+
+[[fi:Ilmari Mattus]]
