robot  legger til: [[pag:Germany]]

--- a/Duiska.mw
+++ b/Duiska.mw
@@ -136,6 +136,7 @@ Ruhta: [[Euro]]<BR>
 [[oc:Alemanha]]
 [[os:Герман]]
 [[pa:ਜ੍ਰਮਨੀ]]
+[[pag:Germany]]
 [[pam:Alemania]]
 [[pdc:Deitschland]]
 [[pih:Doichland]]
