--- a/Savonranta.mw
+++ b/Savonranta.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Savonranta gielda
-| vearjogovva = [[Image:Savonranta.png|100px|Savonranta vearjogovva]]
-| Kárta = [[Image:Savonranta-sijainti.png|140px|Savonranta sajádat]]
+| vearjogovva = [[Image:Savonranta.vaakuna.svg|100px|Savonranta vearjogovva]]
+| Kárta = [[Image:Savonranta.sijainti.suomi.2007.svg|140px|Savonranta sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Lulli-Savo eanangoddi|Lulli-Savo]]
 | guovlugielda = [[Savonlinna guovlugielda]]
