--- a/Rantasalmi.mw
+++ b/Rantasalmi.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Rantasalmi gielda
-| vearjogovva = [[Image:Rantasalmi vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Rantasalmi in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Rantasalmi.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Rantasalmi.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Lulli-Savo eanangoddi|Lulli-Savo]]
 | guovlugielda = [[Juva guovlugielda]]
