robot  legger til: az, bat-smg, be, dv, fo, fur, jv, ne, qu, si, uz, vec, wo endrer: cy, en, fa, id, ml, ms, sk, yo

--- a/Beaivvášgoddi.mw
+++ b/Beaivvášgoddi.mw
@@ -9,81 +9,94 @@ Beaivvášgottis lea [[Beaivváš]], 8 [[planehta]] ja su 165 [[mánnu|mánu]] s
 [[als:Sonnensystem]]
 [[ar:نظام شمسي]]
 [[ast:Sistema solar]]
-[[zh-min-nan:Thài-iông-hē]]
-[[bs:Sunčev sistem]]
-[[br:Koskoriad an Heol]]
+[[az:Günəş sistemi]]
+[[bat-smg:Saulės sėstėma]]
+[[be:Сонечная сістэма]]
 [[bg:Слънчева система]]
+[[br:Koskoriad an Heol]]
+[[bs:Sunčev sistem]]
 [[ca:Sistema solar]]
 [[cs:Sluneční soustava]]
-[[cy:Cyfundrefn Heulol]]
+[[cy:Cysawd yr Haul]]
 [[da:Solsystem]]
 [[de:Sonnensystem]]
-[[et:Päikesesüsteem]]
+[[dv:އިރަވީ ނިޒާމު]]
 [[el:Ηλιακό σύστημα]]
-[[en:Solar system]]
-[[es:Sistema Solar]]
+[[en:Solar System]]
 [[eo:Sunsistemo]]
+[[es:Sistema Solar]]
+[[et:Päikesesüsteem]]
 [[eu:Eguzki-sistema]]
-[[fa:منظومه شمسی]]
+[[fa:سامانه خورشیدی]]
+[[fi:Aurinkokunta]]
+[[fo:Sólskipanin]]
 [[fr:Système solaire]]
+[[fur:Sisteme solâr]]
 [[fy:Sinnestelsel]]
 [[ga:Grianchóras]]
 [[gl:Sistema Solar]]
 [[gu:સૂર્યમંડળ]]
-[[ko:태양계]]
+[[he:מערכת השמש]]
 [[hr:Sunčev sustav]]
-[[io:Sunala sistemo]]
-[[ilo:Sistema a Solar]]
-[[id:Tata Surya]]
+[[ht:Sistèm solè]]
+[[hu:Naprendszer]]
 [[ia:Systema solar]]
+[[id:Tata surya]]
 [[ie:Solari sistema]]
+[[ilo:Sistema a Solar]]
+[[io:Sunala sistemo]]
 [[is:Sólkerfið]]
 [[it:Sistema solare]]
-[[he:מערכת השמש]]
-[[sw:Mfumo wa jua na sayari zake]]
-[[ht:Sistèm solè]]
+[[ja:太陽系]]
+[[jv:Tata surya]]
+[[ko:태양계]]
 [[ku:Pergala rojê]]
 [[la:Systema solare]]
-[[lv:Saules sistēma]]
 [[lb:Sonnesystem]]
-[[lt:Saulės sistema]]
 [[li:Zonnestèlsel]]
-[[hu:Naprendszer]]
+[[lt:Saulės sistema]]
+[[lv:Saules sistēma]]
 [[mk:Сончев систем]]
-[[ml:സൌരയൂഥം]]
-[[mt:Sistema Solari]]
-[[ms:Sistem suria]]
+[[ml:സൗരയൂഥം]]
 [[mn:Нарны аймаг]]
-[[nl:Zonnestelsel]]
+[[ms:Sistem Suria]]
+[[mt:Sistema Solari]]
+[[nds:Sünnsystem]]
 [[nds-nl:Zunnesysteem]]
-[[ja:太陽系]]
-[[no:Solsystem]]
+[[ne:सौर्यमण्डल]]
+[[nl:Zonnestelsel]]
 [[nn:Solsystemet]]
+[[no:Solsystem]]
 [[nov:Sunal sisteme]]
 [[oc:Sistèma Solar]]
 [[pam:Solar System]]
-[[nds:Sünnsystem]]
 [[pl:Układ Słoneczny]]
 [[pt:Sistema Solar]]
+[[qu:Inti Llika]]
 [[ro:Sistem solar]]
 [[ru:Солнечная система]]
-[[sco:Solar seestem]]
-[[sq:Sistemi diellor]]
 [[scn:Sistema sulari]]
-[[simple:Solar system]]
-[[sk:Planetárna sústava]]
-[[sl:Osončje]]
-[[sr:Сунчев систем]]
+[[sco:Solar seestem]]
 [[sh:Sunčev sistem]]
-[[fi:Aurinkokunta]]
+[[si:සෞරග්‍රහ මණ්ඩලය]]
+[[simple:Solar system]]
+[[sk:Slnečná sústava]]
+[[sl:Osončje]]
+[[sq:Sistemi diellor]]
+[[sr:Сунчев систем]]
 [[sv:Solsystemet]]
+[[sw:Mfumo wa jua na sayari zake]]
 [[ta:சூரியக் குடும்பம்]]
 [[th:ระบบสุริยะ]]
-[[ur:نظام شمسی]]
-[[vi:Hệ Mặt Trời]]
 [[tr:Güneş Sistemi]]
 [[uk:Сонячна система]]
-[[wa:sistinme solrece]]
-[[yo:Ọ̀nà ètò tòòrùn]]
-[[zh-yue:太陽系]]
+[[ur:نظام شمسی]]
+[[uz:Quyosh tizimi]]
+[[vec:Sistema sołare]]
+[[vi:Hệ Mặt Trời]]
+[[wa:Sistinme solrece]]
+[[wo:Nosteeg jant]]
+[[yo:Ètò òòrùn]]
 [[zh:太阳系]]
+[[zh-min-nan:Thài-iông-hē]]
+[[zh-yue:太陽系]]
