robot  endrer: [[sh:Vremenska zona]]

--- a/Áigeavádat.mw
+++ b/Áigeavádat.mw
@@ -62,7 +62,7 @@
 [[qu:Pacha suyu]]
 [[ro:Fus orar]]
 [[ru:Часовой пояс]]
-[[sh:Časovna zona]]
+[[sh:Vremenska zona]]
 [[simple:Time zone]]
 [[sk:Časové pásmo]]
 [[sl:Časovni pas]]
