*Empty MediaWiki Message*

--- a/Vladimir_Putin.mw
+++ b/Vladimir_Putin.mw
@@ -1,4 +1,4 @@
-[[Image:Russia.VladimirPutin.02.jpg|thumb|140px]]
+[[Image:Putin (cropped).jpg|thumb|140px]]
 
 '''Vladimir Putin''' ([[ruoššagiella|ruoššagillii]] Владимир Владимирович Путин) ([[golggotmánu 7.]] [[1952]]) lea [[ruošša]] politihkkár ja presideanta.
 
