--- a/Juankoski.mw
+++ b/Juankoski.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Juankoski gielda
-| vearjogovva = [[Image:Juankoski.jpg|100px|vearjogovva]]
-| Kárta = [[Image:Location of Juankoski in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Juankoski.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Juankoski.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Davvenuorti-Savo guovlugielda]]
