*Empty MediaWiki Message*

--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -1,7 +1,6 @@
 [[Image:Breinigerberg.jpg|thumb|Breinigerberg]]
 '''Breinigerberg''' lea uhca suohkan [[Duiska]].
 
-
 == Vuođđodieđut: ==
 * Viidodat: 4 njealjehaskilomehtera
 * Ássit: 971 ([[2005]])
@@ -14,6 +13,7 @@ Luonddupárka Nordeifel
 *[http://www.Breinig.de Breinig]
 *[http://www.Breinigerberg.de Breinigerberg]
 
-
-
 [[Category:Duiska]]
+
+[[de:Breinigerberg]]
+[[en:Breinigerberg]]
