--- a/Rautavaara.mw
+++ b/Rautavaara.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Rautavaara gielda
-| vearjogovva = [[Image:Rautavaara.vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Rautavaara in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Rautavaara.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Rautavaara.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Davvenuorti-Savo guovlugielda]]
