--- a/Ájanarti.mw
+++ b/Ájanarti.mw
@@ -1,3 +1,4 @@
 '''Ájanárti''' (''Saxifraga rivularis'') lea [[Nártešattut|nártešaddu]], mii gullá [[Nárttit|nárttiid]] sohkii.
 
 [[Category:Nárttit]]
+[[da:Bæk-Stenbræk]]
