--- a/Oarje-Sahára.mw
+++ b/Oarje-Sahára.mw
@@ -8,10 +8,11 @@
 [[af:Wes-Sahara]]
 [[am:ምዕራባዊ ሣህራ]]
 [[an:Sajara Ozidental]]
-[[ar:الصحراء الغربية]]
+[[ar:صحراء غربية]]
 [[ast:Sahara Occidental]]
 [[bg:Западна Сахара]]
 [[bo:ནུབ་སར་ཧ་ལ]]
+[[bpy:ৱেস্টার্ন সাহারা]]
 [[bs:Zapadna Sahara]]
 [[ca:Sàhara Occidental]]
 [[cs:Západní Sahara]]
@@ -32,6 +33,7 @@
 [[he:סהרה המערבית]]
 [[hr:Zapadna Sahara]]
 [[hsb:Zapadna Sahara]]
+[[ht:Sahara oksidantal]]
 [[hu:Nyugat-Szahara]]
 [[id:Sahara Barat]]
 [[is:Vestur-Sahara]]
@@ -42,9 +44,12 @@
 [[ko:서사하라]]
 [[kw:Sahara West]]
 [[la:Sahara Occidentalis]]
+[[lij:Sahara Oççidentâ]]
+[[ln:Sahara ya Limbɛ]]
 [[lt:Vakarų Sachara]]
 [[lv:Rietumsahāra]]
 [[mk:Западна Сахара]]
+[[ml:പശ്ചിമ സഹാറ]]
 [[ms:Sahara Barat]]
 [[nl:Westelijke Sahara]]
 [[nn:Vest-Sahara]]
@@ -54,6 +59,7 @@
 [[pl:Sahara Zachodnia]]
 [[ps:لوېديځه صحارا]]
 [[pt:Saara Ocidental]]
+[[qu:Kunti Sahara]]
 [[ro:Sahara Occidentală]]
 [[ru:Западная Сахара]]
 [[sh:Zapadna Sahara]]
@@ -70,5 +76,6 @@
 [[uk:Західна Сахара]]
 [[vo:Vesüda-Saharän]]
 [[wa:Sara coûtchantrece]]
+[[wo:Sahara gu Sowwu]]
 [[zh:西撒哈拉]]
 [[zh-min-nan:Sai Sahara]]
