robot  legger til: [[ca:Abadia de Westminster]]

--- a/Westminster_Abbey.mw
+++ b/Westminster_Abbey.mw
@@ -3,24 +3,26 @@
 
 == Historjá ==
 
-[[id:Westminster Abbey]]
 [[bg:Уестминстърско абатство]]
+[[ca:Abadia de Westminster]]
 [[cs:Westminsterské opatství]]
 [[da:Westminster Abbey]]
 [[de:Westminster Abbey]]
 [[en:Westminster Abbey]]
-[[es:Abadía de Westminster]]
 [[eo:Abatejo Westminster]]
+[[es:Abadía de Westminster]]
 [[fa:کلیسای وست مینیستر]]
+[[fi:Westminster Abbey]]
 [[fr:Abbaye de Westminster]]
-[[hr:Westminsterska opatija]]
-[[it:Abbazia di Westminster]]
 [[he:מנזר וסטמינסטר]]
+[[hr:Westminsterska opatija]]
+[[hu:Westminster-apátság]]
+[[id:Westminster Abbey]]
+[[it:Abbazia di Westminster]]
+[[ja:ウェストミンスター寺院]]
 [[ka:ვესტმინსტერის სააბატო]]
 [[lt:Vestminsterio vienuolynas]]
-[[hu:Westminster-apátság]]
 [[nl:Westminster Abbey]]
-[[ja:ウェストミンスター寺院]]
 [[no:Westminster Abbey]]
 [[pl:Opactwo Westminsterskie]]
 [[pt:Abadia de Westminster]]
@@ -28,7 +30,6 @@
 [[ru:Вестминстерское аббатство]]
 [[simple:Westminster Abbey]]
 [[sk:Westminsterské opátstvo]]
-[[fi:Westminster Abbey]]
 [[sv:Westminster Abbey]]
 [[uk:Вестмінстерське абатство]]
 [[zh:西敏寺]]
