--- a/Tuusniemi.mw
+++ b/Tuusniemi.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Tuusniemi gielda
-| vearjogovva = [[Image:Tuusniemi_waakuna.jpg|100px|vearjogovva]]
-| Kárta = [[Image:Location of Tuusniemi in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Tuusniemi.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Tuusniemi.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Davvenuorti-Savo guovlugielda]]
