robot  legger til: [[vec:Ìxołe Åland]]

--- a/Ålánda.mw
+++ b/Ålánda.mw
@@ -78,5 +78,6 @@ geađgi = [[Gálgageađgi]] |
 [[th:หมู่เกาะโอลันด์]]
 [[tr:Åland]]
 [[uk:Аландські острови]]
+[[vec:Ìxołe Åland]]
 [[wo:Dunu Aland]]
 [[zh:奥兰 (芬兰)]]
