--- a/Kuopio.mw
+++ b/Kuopio.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Kuopio gávpot
-| vearjogovva = [[Image:Kuopion vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Kuopio.png|140px|sajádat]]
+| vearjogovva = [[Image:Kuopio.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Kuopio.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Kuopio guovlugielda]]
