--- a/Iisalmi.mw
+++ b/Iisalmi.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Iisalmi gávpot
-| vearjogovva = [[Image:Iisalmi vaakuna.jpg|100px|vearjogovva]]
-| Kárta = [[Image:Location of Iisalmi in Finland.PNG|140px|sajádat]]
+| vearjogovva = [[Image:Iisalmi.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Iisalmi.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Badje-Savo guovlugielda]]
