--- a/Karttula.mw
+++ b/Karttula.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma = Karttula gielda
-| vearjogovva = [[Image:Karttula.vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Karttula in Finland.png|140px|sajádat]]
+| vearjogovva = [[Image:Karttula.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Karttula.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Kuopio guovlugielda]]
