--- a/Lapinlahti.mw
+++ b/Lapinlahti.mw
@@ -1,8 +1,8 @@
 :''Lapinlahti lea maid [[Helsset|Helssega]] oassi. Geahča [[Lapinlahti (Helsset)]].
 {{Gieldadieđut, Suopma
 | namma = Lapinlahti gielda
-| vearjogovva = [[Image:Lapinlahti vaakuna.png|100px|vearjogovva]]
-| Kárta = [[Image:Location of Lapinlahti.png|140px|sajádat]]
+| vearjogovva = [[Image:Lapinlahti.vaakuna.svg|100px|vearjogovva]]
+| Kárta = [[Image:Lapinlahti.sijainti.suomi.2007.svg|140px|sajádat]]
 | leatna = [[Nuorta-Suoma leatna]]
 | eanangoddi= [[Davvi-Savo eanangoddi|Davvi-Savo]]
 | guovlugielda = [[Badje-Savo guovlugielda]]
