[[nn:Nordisk sameråd]]

--- a/Sámiráđđi.mw
+++ b/Sámiráđđi.mw
@@ -10,3 +10,5 @@ Sámiráđi dievasčoahkkimis leat 15 lahtu, geat ovddastit gávcci lahttosearvv
 * [[duiskkagiella|duiskkagillii]] Der Rat Der Saamen
 * [[fránskkagiella|fránskkagillii]] Le Conseil Des Sami
 * [[spánskagiella|spánskkagillii]] El Consejo Saami
+
+[[nn:Nordisk sameråd]]
