robot  legger til: [[ms:Bahasa Iceland]]

--- a/Islánddagiella.mw
+++ b/Islánddagiella.mw
@@ -83,6 +83,7 @@
 [[lij:Lengua islandeise]]
 [[lmo:Lengua Islandesa]]
 [[lt:Islandų kalba]]
+[[ms:Bahasa Iceland]]
 [[nl:IJslands]]
 [[nn:Islandsk språk]]
 [[no:Islandsk]]
