robot  legger til: [[fa:دلار آمریکا]]

--- a/USA_dollár.mw
+++ b/USA_dollár.mw
@@ -22,6 +22,7 @@
 [[es:Dólar estadounidense]]
 [[et:USA dollar]]
 [[eu:Estatubatuar dolarra]]
+[[fa:دلار آمریکا]]
 [[fi:Yhdysvaltain dollari]]
 [[fr:Dollar américain]]
 [[fy:Amerikaanske Dollar]]
