robot  legger til: [[aa:Enqlizxsh - English]]

--- a/Eaŋgalsgiella.mw
+++ b/Eaŋgalsgiella.mw
@@ -61,6 +61,7 @@ Eaŋgalasgiela historjjá sáhttá juohkit golbma badjái:
 [[Category:Gielat]]
 [[Category:Germánalaš gielat]]
 
+[[aa:Enqlizxsh - English]]
 [[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
