--- a/Hedemora_gielda.mw
+++ b/Hedemora_gielda.mw
@@ -3,11 +3,11 @@
 
 {{Dalarna leatna}}
 
-[[de:Hedemora]]
-[[en:Hedemora]]
+[[de:Hedemora (Gemeinde)]]
+[[en:Hedemora Municipality]]
 [[fi:Hedemora]]
-[[fr:Hedemora]]
-[[it:Hedemora]]
+[[fr:Commune d'Hedemora]]
+[[it:Hedemora (comune)]]
 [[nl:Hedemora]]
-[[no:Hedemora]]
-[[sv:Hedemora]]
+[[no:Hedemora kommune]]
+[[sv:Hedemora kommun]]
