--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -15,5 +15,32 @@ Luonddupárka Nordeifel
 
 [[Category:Duiska]]
 
+[[af:Breinigerberg]]
+[[ast:Breinigerberg]]
+[[ca:Breinigerberg]]
+[[chy:Breinigerberg]]
+[[da:Breinigerberg]]
 [[de:Breinigerberg]]
 [[en:Breinigerberg]]
+[[eo:Breinigerberg]]
+[[id:Breinigerberg]]
+[[io:Breinigerberg]]
+[[is:Breinigerberg]]
+[[it:Breinigerberg]]
+[[ja:ブライニガーベルグ]]
+[[ksh:Breenijerberch]]
+[[kw:Breinigerberg]]
+[[la:Breinigerberg]]
+[[lb:Breinigerberg]]
+[[nds:Breinigerberg]]
+[[nds-nl:Breinigerberg]]
+[[nl:Breinigerberg]]
+[[no:Breinigerberg]]
+[[pdc:Breinigerberg]]
+[[pt:Breinigerberg]]
+[[ru:Брайнигерберг]]
+[[sco:Breinigerberg]]
+[[simple:Breinigerberg]]
+[[so:Breinigerberg]]
+[[sw:Breinigerberg]]
+[[vo:Breinigerberg]]
