robot  legger til: [[fa:۵ ژوئیه]]

--- a/Suoidnemánu_5..mw
+++ b/Suoidnemánu_5..mw
@@ -47,6 +47,7 @@
 [[es:5 de julio]]
 [[et:5. juuli]]
 [[eu:Uztailaren 5]]
+[[fa:۵ ژوئیه]]
 [[fi:5. heinäkuuta]]
 [[fiu-vro:5. hainakuu päiv]]
 [[fo:5. juli]]
