--- a/Suoidnemánu_20..mw
+++ b/Suoidnemánu_20..mw
@@ -48,6 +48,7 @@
 [[es:20 de julio]]
 [[et:20. juuli]]
 [[eu:Uztailaren 20]]
+[[fa:۲۰ ژوئیه]]
 [[fi:20. heinäkuuta]]
 [[fiu-vro:20. hainakuu päiv]]
 [[fo:20. juli]]
