--- a/Suoidnemánu_1..mw
+++ b/Suoidnemánu_1..mw
@@ -50,6 +50,7 @@
 [[es:1 de julio]]
 [[et:1. juuli]]
 [[eu:Uztailaren 1]]
+[[fa:۱ ژوئیه]]
 [[fi:1. heinäkuuta]]
 [[fiu-vro:1. hainakuu päiv]]
 [[fo:1. juli]]
