robot  legger til: [[pms:Australia]], [[wo:Óstraali]]

--- a/Australia.mw
+++ b/Australia.mw
@@ -110,6 +110,7 @@ Ruhta: [[Dollar]]<BR>
 [[pdc:Australie]]
 [[pih:Ostrielya]]
 [[pl:Australia]]
+[[pms:Australia]]
 [[ps:آسټراليا]]
 [[pt:Austrália]]
 [[qu:Awstralya]]
@@ -139,6 +140,7 @@ Ruhta: [[Dollar]]<BR>
 [[vec:Austrałia]]
 [[vi:Úc]]
 [[vo:Laustralän]]
+[[wo:Óstraali]]
 [[wuu:澳大利亚]]
 [[yi:אויסטראליע]]
 [[zea:Australië]]
