--- a/Noaidelieđđi.mw
+++ b/Noaidelieđđi.mw
@@ -1,16 +1,18 @@
-[[Image:Illustration Orchis morio0.jpg|thumb|250px]]
-'''Noaidelieđđi'''
+[[Image:Dactylorhiza maculata Nordens Flora 399.jpg|thumb|250px|Noaidelieđđi (''Dactylorhiza maculata'')]]
+'''Noaidelieđđi'''  (''Dactylorhiza maculata'')
+
+{{Commons|Dactylorhiza maculata}}
 
 [[co:Dactylorhiza maculata]]
 [[de:Geflecktes Knabenkraut]]
 [[en:Dactylorhiza maculata]]
 [[es:Dactylorhiza maculata]]
-[[fi:Maariankämmekkä]]
 [[fr:Orchis tacheté]]
 [[it:Dactylorhiza maculata]]
 [[lt:Dėmėtoji gegūnė]]
 [[nl:Gevlekte orchis]]
-[[nn:Flekkmarihand]]
 [[no:Flekkmarihand]]
+[[nn:Flekkmarihand]]
 [[pl:Kukułka plamista]]
+[[fi:Maariankämmekkä]]
 [[sv:Jungfru Marie nycklar]]
