robot  legger til: [[zea:Denemarken]]

--- a/Dánmárku.mw
+++ b/Dánmárku.mw
@@ -156,6 +156,7 @@ Ruhta: Krone <BR>
 [[war:Dinamarka]]
 [[wo:Danmaark]]
 [[yi:דענמארק]]
+[[zea:Denemarken]]
 [[zh:丹麦]]
 [[zh-min-nan:Dan-kok]]
 [[zh-yue:丹麥]]
