robot  legger til: [[fa:۹ مارس]]

--- a/Njukčamánu_9..mw
+++ b/Njukčamánu_9..mw
@@ -59,6 +59,7 @@
 [[es:9 de marzo]]
 [[et:9. märts]]
 [[eu:Martxoaren 9]]
+[[fa:۹ مارس]]
 [[fi:9. maaliskuuta]]
 [[fiu-vro:9. urbõkuu päiv]]
 [[fo:9. mars]]
