--- a/Burundi.mw
+++ b/Burundi.mw
@@ -87,6 +87,7 @@ Ruhta: [[Frangi]]<BR>
 [[pms:Burundi]]
 [[ps:برونډي]]
 [[pt:Burundi]]
+[[qu:Burundi]]
 [[rn:Burundi]]
 [[ro:Burundi]]
 [[ru:Бурунди]]
