--- a/Eaŋgalsgiella.mw
+++ b/Eaŋgalsgiella.mw
@@ -70,10 +70,12 @@ Eaŋgalasgiela historjjá sáhttá juohkit golbma badjái:
 [[ar:لغة إنجليزية]]
 [[arc:ܠܫܢܐ ܐܢܓܠܝܐ]]
 [[ast:Inglés]]
+[[ay:Inlis aru]]
 [[az:İngilis dili]]
 [[bar:Englische Sproch]]
 [[bat-smg:Onglu kalba]]
 [[bcl:Ingles]]
+[[be:Англійская мова]]
 [[be-x-old:Ангельская мова]]
 [[bg:Английски език]]
 [[bn:ইংরেজি ভাষা]]
