--- a/Frankriikka_Polynesia.mw
+++ b/Frankriikka_Polynesia.mw
@@ -30,6 +30,7 @@
 [[is:Franska Pólýnesía]]
 [[it:Polinesia francese]]
 [[ja:フランス領ポリネシア]]
+[[jv:Polinesia Perancis]]
 [[kk:Франсия Полинезиясы]]
 [[ko:프랑스령 폴리네시아]]
 [[kw:Polynesi Frynkek]]
@@ -37,7 +38,7 @@
 [[lij:Polinesia Françeise]]
 [[lt:Prancūzijos Polinezija]]
 [[lv:Franču Polinēzija]]
-[[ms:Polynesia Perancis]]
+[[ms:Polinesia Perancis]]
 [[nl:Frans-Polynesië]]
 [[nn:Fransk Polynesia]]
 [[no:Fransk Polynesia]]
