robot  endrer: [[tpi:Posugol]]

--- a/Portugal.mw
+++ b/Portugal.mw
@@ -140,7 +140,7 @@ Ruhta: [[Euro]] <BR>
 [[tg:Португалия]]
 [[th:ประเทศโปรตุเกส]]
 [[tl:Portugal]]
-[[tpi:Potugal]]
+[[tpi:Posugol]]
 [[tr:Portekiz]]
 [[ty:Pōtītī]]
 [[udm:Португалия]]
