--- a/Kempele.mw
+++ b/Kempele.mw
@@ -1,7 +1,7 @@
 {{Gieldadieđut, Suopma
 | namma =  gielda
-| vearjogovva = 
-| Kárta = 
+| vearjogovva = [[Image:Kempele.vaakuna.svg|100px]]
+| Kárta = [[Image:Kempele.sijainti.suomi.2007.svg|140px]]
 | leatna = [[Oulu leatna]]
 | eanangoddi= [[Davvi-Pohjanmaa eanangoddi|Davvi-Pohjanmaa]]
 | guovlugielda = [[Oulu guovlugielda]]
@@ -11,7 +11,7 @@
 | olmmošlohku = 
 | olmmošlogujahki = 
 | giella = 
-| url = http://www..fi
+| url = http://www.kempele.fi
 | gielddahoavda = 
 | eará = 
 }}
