--- a/Amerihká_ovttastuvvan_stáhtat.mw
+++ b/Amerihká_ovttastuvvan_stáhtat.mw
@@ -175,6 +175,7 @@ Ruhta: [[USA dollar]]<BR>
 [[tl:Estados Unidos]]
 [[tpi:Ol Yunaitet Stet]]
 [[tr:Amerika Birleşik Devletleri]]
+[[ts:United States]]
 [[tt:Amerika Quşma Ştatları]]
 [[ty:Fenua Marite]]
 [[uk:Сполучені Штати Америки]]
