Interwiki:  + [[ksh:Juppitter (Planneet)]]

--- a/Jupiter.mw
+++ b/Jupiter.mw
@@ -68,6 +68,7 @@ Galileolaš mánuid namma boahtá das, ahte [[Galileo Galilei]] gávnnahii daid.
 [[jv:Yupiter]]
 [[ka:იუპიტერი (პლანეტა)]]
 [[ko:목성]]
+[[ksh:Juppitter (Planneet)]]
 [[ku:Berçîs]]
 [[kw:Yow (planet)]]
 [[la:Iuppiter (planeta)]]
