--- a/Mars.mw
+++ b/Mars.mw
@@ -61,6 +61,7 @@ Marsas leat 2 mánut:
 [[kk:Қызылжұлдыз]]
 [[kn:ಮಂಗಳ]]
 [[ko:화성]]
+[[ksh:Mars (Planet)]]
 [[ku:Behram (gerstêrk)]]
 [[kw:Meurth (planet)]]
 [[la:Mars (planeta)]]
