--- a/Saturnus.mw
+++ b/Saturnus.mw
@@ -60,6 +60,7 @@ Saturnusa leat goitge 57 mánu.
 [[ka:სატურნი (პლანეტა)]]
 [[kn:ಶನಿ]]
 [[ko:토성]]
+[[ksh:Satturrən (Planneet)]]
 [[ku:Keywan]]
 [[kw:Sadorn (planet)]]
 [[la:Saturnus (planeta)]]
