--- a/Kongo_dásseváldi.mw
+++ b/Kongo_dásseváldi.mw
@@ -88,6 +88,7 @@
 [[th:สาธารณรัฐคองโก]]
 [[tl:Republika ng Congo]]
 [[tr:Kongo Cumhuriyeti]]
+[[ts:Republic of the Congo]]
 [[uk:Республіка Конго]]
 [[uz:Kongo Respublikasi]]
 [[vec:Republica del Congo]]
