robot  legger til: [[ts:India]]

--- a/India.mw
+++ b/India.mw
@@ -174,6 +174,7 @@ Ruhta: [[Rupia]]<BR>
 [[to:ʻInitia]]
 [[tpi:India]]
 [[tr:Hindistan]]
+[[ts:India]]
 [[tt:Hindstan]]
 [[ty:’Inītia]]
 [[udm:Индия]]
