--- a/Duiskkagiella.mw
+++ b/Duiskkagiella.mw
@@ -142,6 +142,7 @@
 [[sm:Fa'asiamani]]
 [[sq:Gjuha gjermane]]
 [[sr:Немачки језик]]
+[[ss:SíJalimáne]]
 [[st:Se-jeremane]]
 [[sv:Tyska]]
 [[sw:Kijerumani]]
