robot  endrer: [[qu:Kastilla simi]]

--- a/Spánskkagiella.mw
+++ b/Spánskkagiella.mw
@@ -120,7 +120,7 @@
 [[pl:Język hiszpański]]
 [[pms:Lenga spagneula]]
 [[pt:Língua castelhana]]
-[[qu:Kastillanu simi]]
+[[qu:Kastilla simi]]
 [[rm:Lingua spagnola]]
 [[ro:Limba spaniolă]]
 [[ru:Испанский язык]]
