robot  endrer: [[ksh:Dütschland]]

--- a/Duiska.mw
+++ b/Duiska.mw
@@ -100,7 +100,7 @@ Ruhta: [[Euro]]<BR>
 [[kn:ಜರ್ಮನಿ]]
 [[ko:독일]]
 [[ks:जर्मनी]]
-[[ksh:Deutschland]]
+[[ksh:Dütschland]]
 [[ku:Almanya]]
 [[kv:Германия]]
 [[kw:Almayn]]
