robot  endrer: [[ar:لغة إيرلندية]]

--- a/Iirragiella.mw
+++ b/Iirragiella.mw
@@ -38,7 +38,7 @@
 [[af:Iers-Gaelies]]
 [[an:Idioma irlandés]]
 [[ang:Īrisc sprǣc]]
-[[ar:لغة ايرلندية]]
+[[ar:لغة إيرلندية]]
 [[ast:Irlandés]]
 [[az:İrland dili]]
 [[bg:Ирландски език]]
