--- a/Ohcejoga_girku.mw
+++ b/Ohcejoga_girku.mw
@@ -1,4 +1,4 @@
-[[Image:Utsjoki kirkko.JPG|thumb]]
+[[Image:Utsjoki kirkko-4.JPG|thumb]]
 '''Ohcejohka girku''' vihahuvvui geavahussii jagis [[1850]]–[[1853]]
 
 [[fi:Utsjoen kirkko]]
