--- a/Johkamohki_gielda.mw
+++ b/Johkamohki_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Jokkmokks kommun]]
 [[de:Jokkmokk (Gemeinde)]]
 [[en:Jokkmokk Municipality]]
