--- a/Badje-Duortnus_gielda.mw
+++ b/Badje-Duortnus_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Övertorneå kommun]]
 [[de:Övertorneå (Gemeinde)]]
 [[en:Övertorneå Municipality]]
