--- a/Badje-Gáinnas_gielda.mw
+++ b/Badje-Gáinnas_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Överkalix kommun]]
 [[de:Överkalix (Gemeinde)]]
 [[en:Överkalix Municipality]]
