--- a/Bájil_gielda.mw
+++ b/Bájil_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[de:Pajala (Gemeinde)]]
 [[en:Pajala Municipality]]
 [[fi:Pajala]]
