--- a/Bodena_gielda.mw
+++ b/Bodena_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Boden (Sverige)]]
 [[de:Boden (Schweden)]]
 [[en:Boden, Sweden]]
