--- a/Gáinnasa_gielda.mw
+++ b/Gáinnasa_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Kalix kommun]]
 [[de:Kalix (Gemeinde)]]
 [[en:Kalix Municipality]]
