--- a/Girona_gielda.mw
+++ b/Girona_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Kiruna kommun]]
 [[de:Kiruna (Gemeinde)]]
 [[en:Kiruna Municipality]]
