--- a/Háhpáránddi_gielda.mw
+++ b/Háhpáránddi_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[de:Haparanda (Gemeinde)]]
 [[en:Haparanda Municipality]]
 [[fo:Haparanda kommuna]]
