--- a/Luleju_gielda.mw
+++ b/Luleju_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Luleå kommun]]
 [[de:Luleå (Gemeinde)]]
 [[en:Luleå Municipality]]
