--- a/Älvsbyna_gielda.mw
+++ b/Älvsbyna_gielda.mw
@@ -2,6 +2,8 @@
 
 {{Norrbottena leana gielddat}}
 
+[[Category:Norrbottena leatna]]
+
 [[da:Älvsbyns kommun]]
 [[de:Älvsbyn (Gemeinde)]]
 [[en:Älvsbyn Municipality]]
