--- a/Norrbottena_leatna.mw
+++ b/Norrbottena_leatna.mw
@@ -4,7 +4,7 @@
 {{Norrbottena leana gielddat}}
 {{Ruoŧa leanat}}
 
-[[Category:Ruoŧŧa]]
+[[Category:Norrbottena leatna]]
 
 [[bg:Норботен (лен)]]
 [[bs:Norrbottens län]]
