--- a/Borlänge_gielda.mw
+++ b/Borlänge_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Dalarna leatna}}
 
+[[Category:Dalarna leatna]]
+
 [[de:Borlänge (Gemeinde)]]
 [[en:Borlänge Municipality]]
 [[fo:Borlänge kommuna]]
