--- a/Gagnefa_gielda.mw
+++ b/Gagnefa_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Dalarna leatna}}
 
+[[Category:Dalarna leatna]]
+
 [[bg:Гагнефска община]]
 [[de:Gagnef (Gemeinde)]]
 [[en:Gagnef Municipality]]
