--- a/Leksanda_gielda.mw
+++ b/Leksanda_gielda.mw
@@ -2,3 +2,5 @@
 '''Leksanda gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
