--- a/Smedjebackena_gielda.mw
+++ b/Smedjebackena_gielda.mw
@@ -2,3 +2,5 @@
 '''Smedjebackena gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
