--- a/Rättvika_gielda.mw
+++ b/Rättvika_gielda.mw
@@ -2,3 +2,5 @@
 '''Rättvika gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
