--- a/Mora_gielda.mw
+++ b/Mora_gielda.mw
@@ -2,3 +2,5 @@
 '''Mora gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
