--- a/Malung-Sälena_gielda.mw
+++ b/Malung-Sälena_gielda.mw
@@ -2,3 +2,5 @@
 '''Malunga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
