--- a/Älvdalena_gielda.mw
+++ b/Älvdalena_gielda.mw
@@ -2,3 +2,5 @@
 '''Älvdalena gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
