--- a/Vansbro_gielda.mw
+++ b/Vansbro_gielda.mw
@@ -2,3 +2,5 @@
 '''Vansbro gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Dalarna leatna|Dalarna leanas]].
 
 {{Dalarna leatna}}
+
+[[Category:Dalarna leatna]]
