--- a/Ruoŧa_leanat.mw
+++ b/Ruoŧa_leanat.mw
@@ -29,6 +29,8 @@
  
 {{Ruoŧa leanat}}
 
+[[Category:Ruoŧa leanat]]
+
 [[bg:Административно деление на Швеция]]
 [[bs:Švedske pokrajine]]
 [[da:Län]]
