--- a/Oarje-Norrlándda_leatna.mw
+++ b/Oarje-Norrlándda_leatna.mw
@@ -2,7 +2,7 @@
  
 {{Ruoŧa leanat}}
  
-[[Category:Ruoŧŧa]]
+[[Category:Ruoŧa leanat]]
 
 [[bs:Västernorrlands län]]
 [[ca:Comtat de Västernorrland]]
