--- a/Listu_Ruoŧa_gielddain.mw
+++ b/Listu_Ruoŧa_gielddain.mw
@@ -124,7 +124,7 @@
 *[[Biđon]] 
 *[[Boden]] 
 *[[Gáinnas]] 
-*[[Giron]] 
+*[[Giron (gielda)|Giron]] 
 *[[Háhpárándi]] 
 *[[Johkamohkki]] 
 *[[Luleju]] 
