--- a/Hörby_gielda.mw
+++ b/Hörby_gielda.mw
@@ -2,3 +2,5 @@
 '''Hörby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
