--- a/Höganäsa_gielda.mw
+++ b/Höganäsa_gielda.mw
@@ -2,3 +2,5 @@
 '''Höganäsa gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
