--- a/Hässleholma_gielda.mw
+++ b/Hässleholma_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Skåne leana gielddat}}
 
+[[Category:Skåne leatna]]
+
 [[da:Hässleholms kommun]]
 [[de:Hässleholm (Gemeinde)]]
 [[en:Hässleholm Municipality]]
