--- a/Helsingborga_gielda.mw
+++ b/Helsingborga_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Skåne leana gielddat}}
 
+[[Category:Skåne leatna]]
+
 [[da:Helsingborgs kommun]]
 [[de:Helsingborg (Gemeinde)]]
 [[en:Helsingborg Municipality]]
