--- a/Båstada_gielda.mw
+++ b/Båstada_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Skåne leana gielddat}}
 
+[[Category:Skåne leatna]]
+
 [[da:Båstads kommun]]
 [[de:Båstad (Gemeinde)]]
 [[en:Båstad Municipality]]
