--- a/Burlöva_gielda.mw
+++ b/Burlöva_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Skåne leana gielddat}}
 
+[[Category:Skåne leatna]]
+
 [[da:Burlövs kommun]]
 [[de:Burlöv (Gemeinde)]]
 [[en:Burlöv Municipality]]
