--- a/Bromölla_gielda.mw
+++ b/Bromölla_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Skåne leana gielddat}}
 
+[[Category:Skåne leatna]]
+
 [[da:Bromölla kommun]]
 [[de:Bromölla (Gemeinde)]]
 [[en:Bromölla Municipality]]
