--- a/Klippana_gielda.mw
+++ b/Klippana_gielda.mw
@@ -2,3 +2,5 @@
 '''Kilppana gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
