--- a/Kävlinge_gielda.mw
+++ b/Kävlinge_gielda.mw
@@ -2,3 +2,5 @@
 '''Kävlinge gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
