--- a/Lunda_gielda.mw
+++ b/Lunda_gielda.mw
@@ -2,3 +2,5 @@
 '''Lunda gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
