--- a/Osby_gielda.mw
+++ b/Osby_gielda.mw
@@ -2,3 +2,5 @@
 '''Osby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
