--- a/Trelleborga_gielda.mw
+++ b/Trelleborga_gielda.mw
@@ -2,3 +2,5 @@
 '''Trelleborga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
