--- a/Svedala_gielda.mw
+++ b/Svedala_gielda.mw
@@ -2,3 +2,5 @@
 '''Svedala gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
