--- a/Svalöva_gielda.mw
+++ b/Svalöva_gielda.mw
@@ -2,3 +2,5 @@
 '''Svalöva gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
