--- a/Staffanstorpa_gielda.mw
+++ b/Staffanstorpa_gielda.mw
@@ -2,3 +2,5 @@
 '''Staffanstorpa gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
