--- a/Sjöbo_gielda.mw
+++ b/Sjöbo_gielda.mw
@@ -2,3 +2,5 @@
 '''Sjöbo gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
