--- a/Simrishamna_gielda.mw
+++ b/Simrishamna_gielda.mw
@@ -2,3 +2,5 @@
 '''Simrishamna gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
