--- a/Örkelljunga_gielda.mw
+++ b/Örkelljunga_gielda.mw
@@ -2,3 +2,5 @@
 '''Örkelljunga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
