--- a/Ängelholma_gielda.mw
+++ b/Ängelholma_gielda.mw
@@ -2,3 +2,5 @@
 '''Ängelholma gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
