--- a/Åstorpa_gielda.mw
+++ b/Åstorpa_gielda.mw
@@ -2,3 +2,5 @@
 '''Åstorpa gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
