--- a/Vellinge_gielda.mw
+++ b/Vellinge_gielda.mw
@@ -2,3 +2,5 @@
 '''Vellinge gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Skåne leatna|Skåne leanas]].
 
 {{Skåne leana gielddat}}
+
+[[Category:Skåne leatna]]
