--- a/Botkyrka_gielda.mw
+++ b/Botkyrka_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Stockholmma leatna}}
 
+[[Category:Stockholmma leatna]]
+
 [[bg:Ботширка (община)]]
 [[de:Botkyrka (Gemeinde)]]
 [[en:Botkyrka Municipality]]
