--- a/Danderyda_gielda.mw
+++ b/Danderyda_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Stockholmma leatna}}
 
+[[Category:Stockholmma leatna]]
+
 [[de:Danderyd (Gemeinde)]]
 [[en:Danderyd Municipality]]
 [[es:Danderyd]]
