--- a/Ekerö_gielda.mw
+++ b/Ekerö_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Stockholmma leatna}}
 
+[[Category:Stockholmma leatna]]
+
 [[de:Ekerö (Gemeinde)]]
 [[en:Ekerö Municipality]]
 [[fo:Ekerö kommuna]]
