--- a/Haninge_gielda.mw
+++ b/Haninge_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Stockholmma leatna}}
 
+[[Category:Stockholmma leatna]]
+
 [[de:Haninge (Gemeinde)]]
 [[en:Haninge Municipality]]
 [[es:Haninge]]
