--- a/Huddinge_gielda.mw
+++ b/Huddinge_gielda.mw
@@ -3,6 +3,8 @@
 
 {{Stockholmma leatna}}
 
+[[Category:Stockholmma leatna]]
+
 [[da:Huddinge kommun]]
 [[de:Huddinge (Gemeinde)]]
 [[en:Huddinge Municipality]]
