--- a/Lidingö_gielda.mw
+++ b/Lidingö_gielda.mw
@@ -2,3 +2,5 @@
 '''Lidingö gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
