--- a/Nacka_gielda.mw
+++ b/Nacka_gielda.mw
@@ -2,3 +2,5 @@
 '''Nacka gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
