--- a/Norrtälje_gielda.mw
+++ b/Norrtälje_gielda.mw
@@ -2,3 +2,5 @@
 '''Norrtälje gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
