--- a/Nykvarna_gielda.mw
+++ b/Nykvarna_gielda.mw
@@ -2,3 +2,5 @@
 '''Nykvarna gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
