--- a/Salema_gielda.mw
+++ b/Salema_gielda.mw
@@ -2,3 +2,5 @@
 '''Salema gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
