--- a/Sollentuna_gielda.mw
+++ b/Sollentuna_gielda.mw
@@ -2,3 +2,5 @@
 '''Sollentuna gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
