--- a/Solna_gielda.mw
+++ b/Solna_gielda.mw
@@ -2,3 +2,5 @@
 '''Solna gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
