--- a/Tyresö_gielda.mw
+++ b/Tyresö_gielda.mw
@@ -2,3 +2,5 @@
 '''Tyresö gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
