--- a/Täby_gielda.mw
+++ b/Täby_gielda.mw
@@ -2,3 +2,5 @@
 '''Täby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
