--- a/Upplands-Bro_gielda.mw
+++ b/Upplands-Bro_gielda.mw
@@ -2,3 +2,5 @@
 '''Upplands-Bro gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
