--- a/Upplands_Väsby_gielda.mw
+++ b/Upplands_Väsby_gielda.mw
@@ -2,3 +2,5 @@
 '''Upplands Väsby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
