--- a/Vallentuna_gielda.mw
+++ b/Vallentuna_gielda.mw
@@ -2,3 +2,5 @@
 '''Vallentuna gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
