--- a/Vaxholma_gielda.mw
+++ b/Vaxholma_gielda.mw
@@ -2,3 +2,5 @@
 '''Vaxholma gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
