--- a/Österåkera_gielda.mw
+++ b/Österåkera_gielda.mw
@@ -2,3 +2,5 @@
 '''Österåkera gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Stockholmma leatna|Stockholmma leanas]].
 
 {{Stockholmma leatna}}
+
+[[Category:Stockholmma leatna]]
