--- a/Enköpinga_gielda.mw
+++ b/Enköpinga_gielda.mw
@@ -1,6 +1,8 @@
 [[Image:Enköping Municipality in Uppsala County.png|right|200px]]
 '''Enköpinga gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
 
+[[Category:Uppsala leatna]]
+
 [[de:Enköping (Gemeinde)]]
 [[en:Enköping Municipality]]
 [[fi:Enköpingin kunta]]
