--- a/Heby_gielda.mw
+++ b/Heby_gielda.mw
@@ -1,6 +1,8 @@
 [[Image:Heby Municipality in Uppsala County.png|right|200px]]
 '''Heby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
 
+[[Category:Uppsala leatna]]
+
 [[de:Heby (Gemeinde)]]
 [[en:Heby Municipality]]
 [[fo:Heby kommuna]]
