--- a/Håbo_gielda.mw
+++ b/Håbo_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Habo Municipality in Uppsala County.png|right|200px]]
 '''Håbo gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
