--- a/Knivsta_gielda.mw
+++ b/Knivsta_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Knivsta Municipality in Uppsala County.png|right|200px]]
 '''Knivsta gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
