--- a/Tierpa_gielda.mw
+++ b/Tierpa_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Tierp Municipality in Uppsala County.png|right|200px]]
 '''Tierp gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
