--- a/Uppsala_gielda.mw
+++ b/Uppsala_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Uppsala Municipality in Uppsala County.png|right|200px]]
 '''Uppsala gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
