--- a/Älvkarleby_gielda.mw
+++ b/Älvkarleby_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Älvkarleby Municipality in Uppsala County.png|right|200px]]
 '''Älvkarleby gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
