--- a/Östhammara_gielda.mw
+++ b/Östhammara_gielda.mw
@@ -1,2 +1,4 @@
 [[Image:Östhammar Municipality in Uppsala County.png|right|200px]]
 '''Östhammara gielda''' lea gielda [[Ruoŧŧa|Ruoŧas]] [[Uppsala leatna|Uppsala leanas]].
+
+[[Category:Uppsala leatna]]
